<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LectureActivity">

    <Button
        android:id="@+id/lecture_link_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Click this button to access the lecture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lecture_quiz_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Answer the quiz below to get attendance (only given when pass (80%)):"
        app:layout_constraintTop_toBottomOf="@id/lecture_link_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quiz_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/score_textView"
        app:layout_constraintTop_toBottomOf="@id/lecture_quiz_text"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:scrollbars="vertical"/>
    <TextView
        android:id="@+id/score_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="You scored: ..."
        app:layout_constraintBottom_toTopOf="@id/quiz_button"/>
    <Button
        android:id="@+id/quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>